# imWEBs-Python

./: .gitignore  .nojekyll  LICENSE  Rename Shapefile.ipynb  create_unit_management.ipynb  get unique crop codes.ipynb  hydroclimate plot.ipynb  imwebs_get_field_info.ipynb  imwebs_reach_deposite.ipynb  imwebs_subarea_step2.ipynb  imwebs_subarea_step4.ipynb  imwebs_subarea_step7.ipynb  imwebs_wetland_surface_area_storage.ipynb  index.html  index.ipynb  pyproject.toml  robots.txt  search.json  sitemap.xml
ECCC/: Add Crops.ipynb  Pandas.ipynb  imwebs_management_BRC.ipynb  imwebs_management_STC.ipynb  imwebs_reservoir_rating_curve.ipynb  imwebs_subarea_step5.ipynb  imwebs_subarea_step6.3.ipynb
Interface/: 2. compare_results.ipynb  4. RasterValidation.ipynb  5. WaterDelineation.ipynb  6. dep_to_tif.ipynb  test.ipynb  test.py  test_database.ipynb  test_database.py  test_imwebs.py
SubAreaConversion/: h5.ipynb  imwebs_cell_to_subarea.ipynb
bmps/: 01_point_source.html  01_point_source.ipynb  03_reservoir.html  03_reservoir.ipynb  05_riparian_buffer.html  05_riparian_buffer.ipynb  06_grassed_waterway.html  06_grassed_waterway.ipynb  07_vegetation_filter_strip.html  07_vegetation_filter_strip.ipynb  09_wetland.html  09_wetland.ipynb  12_crop_management.html  12_crop_management.ipynb  19_tiledrain.html  19_tiledrain.ipynb  21_26_manure_adjustment.html  41_wascob.html  (+24 more)
desktop_app/: README.md  pyproject.toml
desktop_app/imwebs_desktop/: __init__.py  __main__.py  app.py  definitions.py  service.py
desktop_app/packaging/: build_windows_installer.ps1  imwebs-desktop.iss
(+438 files in other folders)
