[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imwebs-desktop"
version = "0.1.4"
description = "Standalone desktop UI for configuring and running imWEBs workflows"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.8",
    "pyogrio>=0.9"
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.10"
]

[project.scripts]
imwebs-desktop = "imwebs_desktop:main"
